Add heap sanity checker with premature hard crash for debugging write barriers